# ItchParser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  itch_parser  logging.txt  main.cpp
.github/workflows/: ci.yml
Classes/: ItchParser.cpp  ItchParser.hpp  VWAPCalc.cpp  VWAPCalc.hpp
Messages/: MessageStructures.hpp  itch_message_sizes.hpp
tests/: sample.itch  test_parser.cpp
